clusters/homelab/apps/octelium-public/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: octelium-public
  labels:
    app.kubernetes.io/name: octelium-public
    app.kubernetes.io/part-of: homelab
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
